# GomuEngine

./: .clang-format  CMakeLists.txt  DrawText.cpp  DrawText.hpp  Window.cpp  autoformat.sh  gomu.cpp  main.cpp  window.cpp  window.hpp
examples/: Sticks.cpp  Text.cpp  test.frag
include/gomu/: Application.hpp  DrawText.hpp  Font.hpp  Music.hpp  Shader.hpp  Sound.hpp  Sprite.hpp  State.hpp  Text.hpp  Texture.hpp  Timer.hpp  gomu.hpp  input.hpp
src/: Application.cpp  DrawText.cpp  Font.cpp  Music.cpp  Shader.cpp  Sound.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Timer.cpp  error.cpp  error.hpp  gomu.cpp  input.cpp
tests/: DrawText.cpp  Sticks.cpp  Text.cpp  test.frag  test.vert
